--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.google.com/specimen/Press+Start+2P?query=star#styles");
-
+ @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); 
 *{
 margin:0;
 padding:0;
@@ -10,7 +9,7 @@ html{
     box-sizing: border-box;
 }
 body{
-    font-family: 'Press Start 2P', sans-serif;
+    font-family: 'Press Start 2P', cursive;
     color: #eee;
     background-color: #222;
 }
